# OptiFlowInnovators

./: .gitignore  README.md  data_exploration_joel.ipynb  pyproject.toml
Graphics/: flow_graphic.py
Paper/: OptiFlow.cls  documentation.tex  paperdatathon2023.tex
Paper/NTTStorableSupplyPlanner/: OptiFlow.cls  bib.bib  main.tex
Paper/NTTStorableSupplyPlanner/pdf/: main.aux  main.fdb_latexmk  main.fls  main.out
Paper/pdf/: paperdatathon2023.aux  paperdatathon2023.fdb_latexmk  paperdatathon2023.fls  paperdatathon2023.toc
Precalculos_Modelo/: model_precomputation.py
data/: clean_dataset.csv  consumo_material_preprocessed.csv  jan_df_70130.csv  joel_df.csv
model/: optimization_model.py  pyomo_model.py  testing.ipynb
notebooks/: baseline_all_products.ipynb  clean_dataset.ipynb  data_insights.ipynb  demo_walkthrough_optimization_model.ipynb  experimentation_all_prods.ipynb  experimentation_single_prod.ipynb  joel_df.ipynb  lstm_single_product.ipynb  testing.ipynb  tft_all_prods.ipynb  tft_kaggle.ipynb
project_dashboard/: Home.py
src/: boltzmann_ensemble.py  cross_validate.py  dataloaders.py  feature_engineering.py  preprocessing.py  temporal_fusion_transformer.py  train.py  utils.py
src/models/: attention.py  encoders.py  tft.py  utils.py  vsn.py
