[tool.poetry]
name = "optiflow"
version = "0.1.0"
description = ""
authors = ["optiflow"]
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.3"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
category-encoders = "^2.6.3"
xgboost = "^2.0.1"
lightgbm = "^4.1.0"
torch = "^2.1.0"
pytorch-forecasting = "^1.0.0"
lightning = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
